[package]
name = "NymView"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.33"
eframe = "0.33"
egui_commonmark = { version = "0.22", features = ["embedded_image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
clap = "4"
dirs = "5"
nymlib = { git = "https://github.com/valansai/nymlib", branch = "main" }
rand = "0.8"

[[bin]]
name = "nym-view-server"
path = "src/main_server.rs"

[[bin]]
name = "nym-view-client"
path = "src/main.rs"